--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600&display=swap" rel="stylesheet">    <title>landbit / ingenieurbüro für digitale medien</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading" align="center">Loading ...</div>
+    </div>
     <script type="module" src="/dist/index.js"></script>
   </body>
 </html>
