Optimize responsive ui

--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
   </head>
   <body>
     <div id="root">
-      <div class="loading" align="center">Loading ...</div>
+      <div align="center" class="fa-3x"><i class="fas fa-spinner fa-spin"></i></div>
     </div>
     <script type="module" src="/dist/index.js"></script>
   </body>
