center spinner vertically

--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root">
-      <div align="center" class="fa-3x"><i class="fas fa-spinner fa-spin"></i></div>
+      <div align="center" style="padding-top: 5em" class="fa-3x"><i class="fas fa-spinner fa-spin"></i></div>
     </div>
     <script type="module" src="/dist/index.js"></script>
   </body>
