center loading icon

--- a/packages/react/public/index.html
+++ b/packages/react/public/index.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <div id="root">
-      <div align="center" style="padding-top: 5em" class="fa-3x"><i class="fas fa-spinner fa-spin"></i></div>
+      <div style="display: flex;flex-direction: column;justify-content: center;height: 98vh;">
+        <div class="fa-3x" style="font-size: 4em;text-align: center;">
+          <i class="fas fa-spinner fa-spin"></i>
+        </div>
+      </div>
     </div>
     <script type="module" src="/dist/index.js"></script>
   </body>
